MAPPTDESK-5: changed html into macros, various fixes

--- a/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
+++ b/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
@@ -20,73 +20,48 @@
 		<@messages infos=infos errors=errors />
 		<!#-- FIXME USE MACRO  @ appointmentTabs tab="specificDay" appointmentform=appointmentform  -->
 		<@tabs>
-			<ul class="nav nav-tabs">
-				<li >
-					<a href="jsp/admin/plugins/appointment/ManageAppointmentSlots.jsp?view=manageTypicalWeek&id_form=${idForm!}">
-						#i18n{appointment.typicalWeek.pageTitle}
-					</a>
-				</li>
-				<li >
-					<a href="jsp/admin/plugins/appointment/ManageAppointmentSlots.jsp?view=manageSpecificWeek&id_form=${idForm!}">
-						#i18n{appointment.specificWeek.pageTitle}
-					</a>
-				</li>  	 
-				<!-- TODO -->				                          
-				<li class="active">
-					<a href="jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp?plugin_name=appointment-desk&id_form=${idForm!}">
-						#i18n{appointment.specificDay.pageTitle}
-					</a>
-				</li>  	 				                          
-			</ul>
+			<@tabList>
+				<@tabLink href='jsp/admin/plugins/appointment/ManageAppointmentSlots.jsp?view=manageTypicalWeek&id_form=${idForm!}' title='#i18n{appointment.typicalWeek.pageTitle}' />
+				<@tabLink href='jsp/admin/plugins/appointment/ManageAppointmentSlots.jsp?view=manageSpecificWeek&id_form=${idForm!}' title='#i18n{appointment.specificWeek.pageTitle}' />
+				<@tabLink active=true href='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp?plugin_name=appointment-desk&id_form=${idForm!}' title='#i18n{appointment.specificDay.pageTitle}' />
+			</@tabList>
 			<@tabContent>
-				<@box>
-					<@boxHeader title='#i18n{appointment-desk.manage_appointmentdesk.title}' boxTools=true>
-						 <a href="modal" data-toggle="modal" title="Add this item" class="btn btn-primary open-AddBookDialog">
-							<i class="fa fa-plus-circle"></i> Add Desk
-						</a>  		
-					</@boxHeader>
-					<@boxBody>       
+				<h3>#i18n{appointment-desk.manage_appointmentdesk.title}</h3>
+						<@button type='button' class='open-AddBookDialog' params='data-toggle="modal"' buttonTargetId='#my_modal' title='Add this item' buttonIcon='plus-circle' />
+      
 					<@messages infos=infos />
 					<@row>
 						<@columns sm=4>
 							<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class="pull-left">
 								<#assign dDay = day?date>
 								<#assign pDay = dDay?long - (1 * 24 * 60 * 60 * 1000)>
-								<input type="hidden" name="id_form" value="${idForm!1}">
-								<input type="hidden" name="day" value="${pDay?number_to_date}">
-								<@formGroup labelFor='day' labelKey=''>
-									<@button type='submit' size='lg' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-left' title="${pDay?number_to_date}" />
-								</@formGroup>
-							</@tform>
-							<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class="visible-xs pull-right">
-								<#assign nDay = dDay?long + (1 * 24 * 60 * 60 * 1000)>
-								<input type="hidden" name="id_form" value="${idForm!1}">
-								<input type="hidden" name="day" value="${nDay?number_to_date}">
-								<@formGroup labelFor='day' labelKey='' rows=2>
-									<@button type='submit' size='lg' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-right' iconPosition='right' title="${nDay?number_to_date}" />
+								<@input type='hidden' name='id_form' value='${idForm!1}' />
+								<@input type='hidden' name='day' value='${pDay?number_to_date}' />
+								<@formGroup labelFor='day' rows=2>
+									<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-left' title="${pDay?number_to_date}" />
 								</@formGroup>
 							</@tform>
 						</@columns>
-						<@columns sm=6 class='text-center'>
-							<@tform  id='manage_appointmentdesk'  name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp'>
-								<input type="hidden" name="id_form" value="${idForm!1}">
-								<@formGroup labelFor='dayi' labelKey='' >
+						<@columns sm=4 class='text-center'>
+							<@tform id='manage_appointmentdesk' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp'>
+								<@input type='hidden' name='id_form' value='${idForm!1}' />
+								<@formGroup labelFor='dayi'>
 									<@inputGroup>
-										<@inputGroupItem type='addon'>
+										<@inputGroupItem type='text'>
 											<@icon style='calendar' />
 										</@inputGroupItem>
-										<@input type='text' size='lg' name='day' id='day' value="${day!''}"  />
+										<@input type='text' name='day' id='day' value="${day!''}"  />
 									</@inputGroup>
 								</@formGroup>
 							</@tform>
 						</@columns>
-						<@columns sm=2 class='text-right'>
+						<@columns sm=4 class='text-right'>
 							<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class='hidden-xs'>
 								<#assign nDay = dDay?long + (1 * 24 * 60 * 60 * 1000)>
-								<input type="hidden" name="id_form" value="${idForm!1}">
-								<input type="hidden" name="day" value="${nDay?number_to_date}">
-								<@formGroup labelFor='day' labelKey='' rows=2>
-									<@button type='submit' size='lg' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-right' iconPosition='right' title="${nDay?number_to_date}" />
+								<@input type='hidden' name='id_form' value='${idForm!1}' />
+								<@input type='hidden' name='day' value='${nDay?number_to_date}' />
+								<@formGroup labelFor='day' rows=2>
+									<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-right' iconPosition='right' title="${nDay?number_to_date}" />
 								</@formGroup>
 							</@tform>
 						</@columns>
@@ -103,12 +78,7 @@
 						<@tableHeadBodySeparator />
 						<tr>
 							<td style="width:2%;vertical-align:middle" >
-								<button type="button" title="#i18n{appointment.create_comment.pageTitle}" id="toggle-add-comment" class="btn btn-link">
-									<span class="fa-stack fa-md">
-										<i class="fa fa-comment-o fa-stack-2x"></i>
-										<i class="fa fa-plus fa-stack-1x"></i>
-									</span>
-								</button>
+								<@button type='button' title='#i18n{appointment.create_comment.pageTitle}' id='toggle-add-comment' params='data-toggle="modal"' buttonTargetId='#commentModal' buttonIcon='comment-o' hideTitle=['all'] />
 							</td>
 							<td colspan="${x}">
 								<#if list_comments?size gt 0>
@@ -133,64 +103,43 @@
 								<td id="slot-${slot.idSlot!}-desk${x+1!}" class="bg-danger" data-slot="" >
 							</tr>
 						</#list>
-						</@table>
-					</@boxBody>
-				</@box>
+					</@table>
 			</@tabContent>
 		</@tabs>
 		<hr>
     </@columns>
 </@row>
 
-<div class="modal fade" id="commentModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">#i18n{appointment.create_comment.pageTitle}</h4>
-            </div>
-            <div class="modal-body">
-                <@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "doAddComment" idForm locale />
-            </div>
-            <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">#i18n{portal.util.labelCancel}</button></div>
-        </div>
-    </div>
-</div>
+<@modal id='commentModal'>
+	<@modalHeader modalTitle='#i18n{appointment.create_comment.pageTitle}' />
+	<@modalBody>
+		<@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "doAddComment" idForm locale />
+	</@modalBody>
+	<@modalFooter>
+		<@button type='button' params='data-dismiss="modal"' title='#i18n{portal.util.labelCancel}' buttonIcon='times' color='default' />
+	</@modalFooter>
+</@modal>
 
-<div class="modal fade" id="modify-comment" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">#i18n{appointment.create_comment.pageTitle}</h4>
-            </div>
-            <div class="modal-body">
-                <@getCommentForm "comment" "modifyStartingValidityDate" "modifyEndingValidityDate" "doModifyComment" idForm locale />
-            </div>
-            <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">#i18n{portal.util.labelCancel}</button></div>
-        </div>
-    </div>
-</div>
+<@modal id='modify-comment'>
+	<@modalHeader modalTitle='#i18n{appointment.create_comment.pageTitle}' />
+	<@modalBody>
+		<@getCommentForm "comment" "modifyStartingValidityDate" "modifyEndingValidityDate" "doModifyComment" idForm locale />
+	</@modalBody>
+	<@modalFooter>
+		<@button type='button' params='data-dismiss="modal"' title='#i18n{portal.util.labelCancel}' buttonIcon='times' color='default' />
+	</@modalFooter>
+</@modal>
 
-<div class="modal fade" id="qModal" tabindex="-1" role="dialog" aria-labelledby="qModalLabel">
-    <div class="modal-dialog modal-lg" role="document" >
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="btn btn-link pull-right" data-dismiss="modal" aria-label="#i18n{blog.create_blog.labelCollapse}">
-                  <i class="fa fa-remove" aria-hidden="true"></i>
-                </button>
-                <h4 class="modal-title" id="qModalLabel">#i18n{blog.create_blog.labelPreview}</h4>
-            </div>
-            <div class="modal-body">
-                <p id="loader" class="text-center">
-                    <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
-                    <span class="sr-only">#i18n{blog.modify_blog.labelLoading}</span>
-                </p>
-                <iframe style="width:100%;height:60vh;border:0" frameborder="0" id="qModalFrame" src=""></iframe>
-            </div>
-        </div>
-    </div>
-</div>
+<@modal id='qModal'>
+	<@modalHeader modalTitle='#i18n{blog.create_blog.labelPreview}' />
+	<@modalBody>
+		<p id="loader" class="text-center">
+			<i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
+			<span class="sr-only">#i18n{blog.modify_blog.labelLoading}</span>
+		</p>
+		<iframe style="width:100%;height:60vh;border:0" frameborder="0" id="qModalFrame" src=""></iframe>
+	</@modalBody>
+</@modal>
 
 <@modal id='slottoggle'>
 	<@modalBody>
@@ -201,66 +150,57 @@
 	</@modalBody>
 </@modal>
 
-<div class="modal fade" id="my_modal" tabindex="-1" role="dialog" aria-labelledby="qModalLabel">
-    <div class="modal-dialog modal-lg" role="document" >
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="btn btn-link pull-right" data-dismiss="modal" aria-label="#i18n{blog.create_blog.labelCollapse}">
-                  <i class="fa fa-remove" aria-hidden="true"></i>
-                </button>
-                <h4 class="modal-title" id="qModalLabel">#i18n{module.appointment.desk.increment.defaultTitle}</h4>
-            </div>
-            <div class="modal-body">
-                <p id="loader" class="text-center">#i18n{module.appointment.desk.increment.defaultTitle}</p>
-				<@tform id='form-validate' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' params='enctype="multipart/form-data"'>
-					<input type="hidden" name="action" value="incrementMaxCapacity">
-					<input type="hidden" name="id_form" value="${idForm!}">
-					<@formGroup labelFor='incrementing_value' labelKey='#i18n{module.appointment.desk.increment.labelIncrementingValue}' helpKey='${formGroupHelpKey!}' mandatory=true>
-							<@input type='number' name='incrementing_value' id='incrementing_value' value='1' maxlength=2 params='onkeypress="return validateQty(event);"' min=1 max=10 />
-					</@formGroup>
-					<@formGroup labelFor='type' labelKey='#i18n{module.appointment.desk.increment.labelType}'>
-						<@select name='type' id='type' items=list_types default_value='' />
-					</@formGroup>
-					<@formGroup labelFor='startingDate' labelKey='#i18n{module.appointment.desk.increment.labelStartingDate}'>
-						<@inputGroup>
-							<@input type='text' name='starting_date' id='startingDate' value="${day!}" />
-							<@inputGroupItem type='addon'>
-								<@icon style='calendar' />
-							</@inputGroupItem>
-						</@inputGroup>
-					</@formGroup>
-					<@formGroup labelFor='startingTime' labelKey='#i18n{module.appointment.desk.increment.labelStartingTime}'>
-						<@inputGroup>
-							<@input type='text' name='starting_time' id='startingTime' value='' />
-							<@inputGroupItem type='addon'>
-								<@icon style='clock-o' />
-							</@inputGroupItem>
-						</@inputGroup>
-					</@formGroup>
-					<@formGroup labelFor='endingDate' labelKey='#i18n{module.appointment.desk.increment.labelEndingDate}'>
-						<@inputGroup>
-							<@input type='text' name='ending_date' id='endingDate' value="${day!}" />
-							<@inputGroupItem type='addon'>
-								<@icon style='calendar' />
-							</@inputGroupItem>
-						</@inputGroup>
-					</@formGroup>
-					<@formGroup labelFor='endingTime' labelKey='#i18n{module.appointment.desk.increment.labelEndingTime}'>
-						<@inputGroup>
-							<@input type='text' name='ending_time' id='endingTime' value='' />
-							<@inputGroupItem type='addon'>
-								<@icon style='clock-o' />
-							</@inputGroupItem>
-						</@inputGroup>
-					</@formGroup>
-					<@formGroup>
-						<@button type='submit' name='save' id='save' buttonIcon='check' title='#i18n{module.appointment.desk.increment.labelValidate}' />
-					</@formGroup>	
-				</@tform>	
-            </div>
-        </div>
-    </div>
-</div>
+<@modal id='my_modal'>
+	<@modalHeader modalTitle='#i18n{module.appointment.desk.increment.defaultTitle}' />
+	<@modalBody>
+		<p id="loader" class="text-center">#i18n{module.appointment.desk.increment.defaultTitle}</p>
+		<@tform id='form-validate' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' params='enctype="multipart/form-data"'>
+			<@input type='hidden' name='action' value='incrementMaxCapacity' />
+			<@input type='hidden' name='id_form' value='${idForm!}' />
+			<@formGroup labelFor='incrementing_value' labelKey='#i18n{module.appointment.desk.increment.labelIncrementingValue}' helpKey='${formGroupHelpKey!}' mandatory=true>
+					<@input type='number' name='incrementing_value' id='incrementing_value' value='1' maxlength=2 params='onkeypress="return validateQty(event);"' min=1 max=10 />
+			</@formGroup>
+			<@formGroup labelFor='type' labelKey='#i18n{module.appointment.desk.increment.labelType}'>
+				<@select name='type' id='type' items=list_types default_value='' />
+			</@formGroup>
+			<@formGroup labelFor='startingDate' labelKey='#i18n{module.appointment.desk.increment.labelStartingDate}'>
+				<@inputGroup>
+					<@input type='text' name='starting_date' id='startingDate' value="${day!}" />
+					<@inputGroupItem type='text'>
+						<@icon style='calendar' />
+					</@inputGroupItem>
+				</@inputGroup>
+			</@formGroup>
+			<@formGroup labelFor='startingTime' labelKey='#i18n{module.appointment.desk.increment.labelStartingTime}'>
+				<@inputGroup>
+					<@input type='text' name='starting_time' id='startingTime' value='' />
+					<@inputGroupItem type='text'>
+						<@icon style='clock-o' />
+					</@inputGroupItem>
+				</@inputGroup>
+			</@formGroup>
+			<@formGroup labelFor='endingDate' labelKey='#i18n{module.appointment.desk.increment.labelEndingDate}'>
+				<@inputGroup>
+					<@input type='text' name='ending_date' id='endingDate' value="${day!}" />
+					<@inputGroupItem type='text'>
+						<@icon style='calendar' />
+					</@inputGroupItem>
+				</@inputGroup>
+			</@formGroup>
+			<@formGroup labelFor='endingTime' labelKey='#i18n{module.appointment.desk.increment.labelEndingTime}'>
+				<@inputGroup>
+					<@input type='text' name='ending_time' id='endingTime' value='' />
+					<@inputGroupItem type='text'>
+						<@icon style='clock-o' />
+					</@inputGroupItem>
+				</@inputGroup>
+			</@formGroup>
+			<@formGroup>
+				<@button type='submit' name='save' id='save' buttonIcon='check' title='#i18n{module.appointment.desk.increment.labelValidate}' />
+			</@formGroup>	
+		</@tform>
+	</@modalBody>
+</@modal>
 
 <script>
 if( $('.selectable').length > 0 ){
@@ -380,14 +320,6 @@ $(function () {
 		$('#qModal').modal({ show: true })
 	});
 	
-	$(".open-AddBookDialog").click(function () {
-        $('#my_modal').modal({ show: true });
-    });
-	
-	$("#toggle-add-comment").click(function () {
-        $('#commentModal').modal({ show: true });
-    });
-
 	$('#startingTime').datetimepicker({
 		format: 'HH:mm',
 		stepping: 1
