MAPPTDESK-5: fixed button alignment

--- a/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
+++ b/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
@@ -27,83 +27,83 @@
 			</@tabList>
 			<@tabContent>
 				<h3>#i18n{appointment-desk.manage_appointmentdesk.title}</h3>
-						<@button type='button' class='open-AddBookDialog' params='data-toggle="modal"' buttonTargetId='#my_modal' title='Add this item' buttonIcon='plus-circle' />
-      
-					<@messages infos=infos />
-					<@row>
-						<@columns sm=4>
-							<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class="pull-left">
-								<#assign dDay = day?date>
-								<#assign pDay = dDay?long - (1 * 24 * 60 * 60 * 1000)>
-								<@input type='hidden' name='id_form' value='${idForm!1}' />
-								<@input type='hidden' name='day' value='${pDay?number_to_date}' />
-								<@formGroup labelFor='day' rows=2>
-									<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-left' title="${pDay?number_to_date}" />
-								</@formGroup>
-							</@tform>
-						</@columns>
-						<@columns sm=4 class='text-center'>
-							<@tform id='manage_appointmentdesk' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp'>
-								<@input type='hidden' name='id_form' value='${idForm!1}' />
-								<@formGroup labelFor='dayi'>
-									<@inputGroup>
-										<@inputGroupItem type='text'>
-											<@icon style='calendar' />
-										</@inputGroupItem>
-										<@input type='text' name='day' id='day' value="${day!''}"  />
-									</@inputGroup>
-								</@formGroup>
-							</@tform>
-						</@columns>
-						<@columns sm=4 class='text-right'>
-							<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class='hidden-xs'>
-								<#assign nDay = dDay?long + (1 * 24 * 60 * 60 * 1000)>
-								<@input type='hidden' name='id_form' value='${idForm!1}' />
-								<@input type='hidden' name='day' value='${nDay?number_to_date}' />
-								<@formGroup labelFor='day' rows=2>
-									<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-right' iconPosition='right' title="${nDay?number_to_date}" />
-								</@formGroup>
-							</@tform>
-						</@columns>
-					</@row>
-					<@table id='selectable' class="clearfix">
-						<tr>
-							<th></th>
-							<#assign x=numb_desk>
-							<#list 1..x as seq >
-								<th data-selectable="column">Guichet: ${seq}</th>
-							</#list>
-							<th data-selectable="column" class="bg-danger">Surbooking</th>
-						</tr>
-						<@tableHeadBodySeparator />
-						<tr>
-							<td style="width:2%;vertical-align:middle" >
-								<@button type='button' title='#i18n{appointment.create_comment.pageTitle}' id='toggle-add-comment' params='data-toggle="modal"' buttonTargetId='#commentModal' buttonIcon='comment-o' hideTitle=['all'] />
-							</td>
-							<td colspan="${x}">
-								<#if list_comments?size gt 0>
-									<#list list_comments as comment>
-									<div class="comments" data-pop="{'id':'${comment.id}','comment':'${comment.comment!comment?replace('\n', '')?replace('\r', '')?replace('\rn', '')?replace('\'', '&apos;')?replace('\"', '&quote;')}','start':'${comment.startingValidityDate!}','end':'${comment.endingValidityDate}', 'creator':'${comment.creatorUserName!}','creationDate':'${comment.creationDate?date.xs!''}'}" >
-										${comment.comment!comment?replace('\n', '')?replace('\r', '')?replace('\rn', '')?replace('\'', '&apos;')?replace('\"', '&quote;')}
-										
-									</div>
-									</#list>
-								</#if>
-							</td>
-							<td></td>
-						</tr>
-						<#list list_slot as slot>
-							<tr>
-								<td style="width:2%" data-selectable="row">${slot.startingTime!}</td>	
-								<#list 1..x as seq >
-									<!-- <td id="slot-${slot.idSlot!}-desk${x-seq+1!}" class="place selectable <#if slot.isOpen && seq lte slot.maxCapacity >slot-open<#else>slot-close</#if>" data-slot="{'idslot':'${slot.idSlot!}','startingDateTime':'${slot.startingDateTime}','endingDateTime':'${slot.endingDateTime}','maxCapacity':'${slot.maxCapacity}','isOpen':'<#if slot.isOpen && seq lte slot.maxCapacity >true<#else>false</#if>','isSpecific':'${slot.isSpecific?c}','idForm':${slot.idForm!1},'desk':'${seq}'}" > -->
-									<td id="slot-${slot.startingTime!?replace(':', '')}-desk${seq}" class="place selectable <#if slot.isOpen && seq lte slot.maxCapacity >slot-open<#else>slot-close</#if>" data-slot="{'idSlot':'${slot.idSlot!}','startingDateTime':'${slot.startingDateTime}','endingDateTime':'${slot.endingDateTime}','maxCapacity':'${slot.maxCapacity}','isOpen':'<#if slot.isOpen && seq lte slot.maxCapacity >true<#else>false</#if>','isSpecific':'${slot.isSpecific?c}','idForm':'${slot.idForm!1}'}" >
-									</td>	
-								</#list>
-								<td id="slot-${slot.idSlot!}-desk${x+1!}" class="bg-danger" data-slot="" >
-							</tr>
+				<@div align='right'><@button type='button' class='open-AddBookDialog' params='data-toggle="modal"' buttonTargetId='#my_modal' title='Add this item' buttonIcon='plus-circle' /></@div>
+  
+				<@messages infos=infos />
+				<@row>
+					<@columns sm=4>
+						<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class="pull-left">
+							<#assign dDay = day?date>
+							<#assign pDay = dDay?long - (1 * 24 * 60 * 60 * 1000)>
+							<@input type='hidden' name='id_form' value='${idForm!1}' />
+							<@input type='hidden' name='day' value='${pDay?number_to_date}' />
+							<@formGroup labelFor='day' rows=2>
+								<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-left' title="${pDay?number_to_date}" />
+							</@formGroup>
+						</@tform>
+					</@columns>
+					<@columns sm=4>
+						<@tform id='manage_appointmentdesk' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp'>
+							<@input type='hidden' name='id_form' value='${idForm!1}' />
+							<@formGroup labelFor='dayi'>
+								<@inputGroup>
+									<@inputGroupItem type='text'>
+										<@icon style='calendar' />
+									</@inputGroupItem>
+									<@input type='text' name='day' id='day' value="${day!''}"  />
+								</@inputGroup>
+							</@formGroup>
+						</@tform>
+					</@columns>
+					<@columns sm=4 align='right'>
+						<@tform type='inline' name='manage_appointmentdesk' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' class='hidden-xs'>
+							<#assign nDay = dDay?long + (1 * 24 * 60 * 60 * 1000)>
+							<@input type='hidden' name='id_form' value='${idForm!1}' />
+							<@input type='hidden' name='day' value='${nDay?number_to_date}' />
+							<@formGroup labelFor='day' rows=2>
+								<@button type='submit' color='primary' name='view_manageAppointmentDesks' buttonIcon='angle-double-right' iconPosition='right' title="${nDay?number_to_date}" />
+							</@formGroup>
+						</@tform>
+					</@columns>
+				</@row>
+				<@table id='selectable' class="clearfix">
+					<tr>
+						<th></th>
+						<#assign x=numb_desk>
+						<#list 1..x as seq >
+							<th data-selectable="column">Guichet: ${seq}</th>
 						</#list>
-					</@table>
+						<th data-selectable="column" class="bg-danger">Surbooking</th>
+					</tr>
+					<@tableHeadBodySeparator />
+					<tr>
+						<td style="width:2%;vertical-align:middle" >
+							<@button type='button' title='#i18n{appointment.create_comment.pageTitle}' id='toggle-add-comment' params='data-toggle="modal"' buttonTargetId='#commentModal' buttonIcon='comment-o' hideTitle=['all'] />
+						</td>
+						<td colspan="${x}">
+							<#if list_comments?size gt 0>
+								<#list list_comments as comment>
+								<div class="comments" data-pop="{'id':'${comment.id}','comment':'${comment.comment!comment?replace('\n', '')?replace('\r', '')?replace('\rn', '')?replace('\'', '&apos;')?replace('\"', '&quote;')}','start':'${comment.startingValidityDate!}','end':'${comment.endingValidityDate}', 'creator':'${comment.creatorUserName!}','creationDate':'${comment.creationDate?date.xs!''}'}" >
+									${comment.comment!comment?replace('\n', '')?replace('\r', '')?replace('\rn', '')?replace('\'', '&apos;')?replace('\"', '&quote;')}
+									
+								</div>
+								</#list>
+							</#if>
+						</td>
+						<td></td>
+					</tr>
+					<#list list_slot as slot>
+						<tr>
+							<td style="width:2%" data-selectable="row">${slot.startingTime!}</td>	
+							<#list 1..x as seq >
+								<!-- <td id="slot-${slot.idSlot!}-desk${x-seq+1!}" class="place selectable <#if slot.isOpen && seq lte slot.maxCapacity >slot-open<#else>slot-close</#if>" data-slot="{'idslot':'${slot.idSlot!}','startingDateTime':'${slot.startingDateTime}','endingDateTime':'${slot.endingDateTime}','maxCapacity':'${slot.maxCapacity}','isOpen':'<#if slot.isOpen && seq lte slot.maxCapacity >true<#else>false</#if>','isSpecific':'${slot.isSpecific?c}','idForm':${slot.idForm!1},'desk':'${seq}'}" > -->
+								<td id="slot-${slot.startingTime!?replace(':', '')}-desk${seq}" class="place selectable <#if slot.isOpen && seq lte slot.maxCapacity >slot-open<#else>slot-close</#if>" data-slot="{'idSlot':'${slot.idSlot!}','startingDateTime':'${slot.startingDateTime}','endingDateTime':'${slot.endingDateTime}','maxCapacity':'${slot.maxCapacity}','isOpen':'<#if slot.isOpen && seq lte slot.maxCapacity >true<#else>false</#if>','isSpecific':'${slot.isSpecific?c}','idForm':'${slot.idForm!1}'}" >
+								</td>	
+							</#list>
+							<td id="slot-${slot.idSlot!}-desk${x+1!}" class="bg-danger" data-slot="" >
+						</tr>
+					</#list>
+				</@table>
 			</@tabContent>
 		</@tabs>
 		<hr>
@@ -157,13 +157,13 @@
 		<@tform id='form-validate' action='jsp/admin/plugins/appointment/modules/desk/ManageAppointmentDesks.jsp' params='enctype="multipart/form-data"'>
 			<@input type='hidden' name='action' value='incrementMaxCapacity' />
 			<@input type='hidden' name='id_form' value='${idForm!}' />
-			<@formGroup labelFor='incrementing_value' labelKey='#i18n{module.appointment.desk.increment.labelIncrementingValue}' helpKey='${formGroupHelpKey!}' mandatory=true>
-					<@input type='number' name='incrementing_value' id='incrementing_value' value='1' maxlength=2 params='onkeypress="return validateQty(event);"' min=1 max=10 />
+			<@formGroup labelFor='incrementing_value' labelKey='#i18n{module.appointment.desk.increment.labelIncrementingValue}' helpKey='${formGroupHelpKey!}' mandatory=true rows=2>
+				<@input type='number' name='incrementing_value' id='incrementing_value' value='1' maxlength=2 params='onkeypress="return validateQty(event);"' min=1 max=10 />
 			</@formGroup>
-			<@formGroup labelFor='type' labelKey='#i18n{module.appointment.desk.increment.labelType}'>
+			<@formGroup labelFor='type' labelKey='#i18n{module.appointment.desk.increment.labelType}' rows=2>
 				<@select name='type' id='type' items=list_types default_value='' />
 			</@formGroup>
-			<@formGroup labelFor='startingDate' labelKey='#i18n{module.appointment.desk.increment.labelStartingDate}'>
+			<@formGroup labelFor='startingDate' labelKey='#i18n{module.appointment.desk.increment.labelStartingDate}' rows=2>
 				<@inputGroup>
 					<@input type='text' name='starting_date' id='startingDate' value="${day!}" />
 					<@inputGroupItem type='text'>
@@ -171,7 +171,7 @@
 					</@inputGroupItem>
 				</@inputGroup>
 			</@formGroup>
-			<@formGroup labelFor='startingTime' labelKey='#i18n{module.appointment.desk.increment.labelStartingTime}'>
+			<@formGroup labelFor='startingTime' labelKey='#i18n{module.appointment.desk.increment.labelStartingTime}' rows=2>
 				<@inputGroup>
 					<@input type='text' name='starting_time' id='startingTime' value='' />
 					<@inputGroupItem type='text'>
@@ -179,7 +179,7 @@
 					</@inputGroupItem>
 				</@inputGroup>
 			</@formGroup>
-			<@formGroup labelFor='endingDate' labelKey='#i18n{module.appointment.desk.increment.labelEndingDate}'>
+			<@formGroup labelFor='endingDate' labelKey='#i18n{module.appointment.desk.increment.labelEndingDate}' rows=2>
 				<@inputGroup>
 					<@input type='text' name='ending_date' id='endingDate' value="${day!}" />
 					<@inputGroupItem type='text'>
@@ -187,7 +187,7 @@
 					</@inputGroupItem>
 				</@inputGroup>
 			</@formGroup>
-			<@formGroup labelFor='endingTime' labelKey='#i18n{module.appointment.desk.increment.labelEndingTime}'>
+			<@formGroup labelFor='endingTime' labelKey='#i18n{module.appointment.desk.increment.labelEndingTime}' rows=2>
 				<@inputGroup>
 					<@input type='text' name='ending_time' id='endingTime' value='' />
 					<@inputGroupItem type='text'>
