--- a/webapp/css/admin/plugins/appointment/appointment_desk.css
+++ b/webapp/css/admin/plugins/appointment/appointment_desk.css
@@ -1,6 +1,38 @@
-/* Appointment Desk Styles */
+/* **** Appointment Desk Styles **** */
+.fc-center{
+	margin: auto
+} 
+
+.fc-datepicker{
+	vertical-align: top
+}
+
+.fc-datepicker + .form-control{
+	padding-top: 0;
+	margin-top: 0;
+	vertical-align: top
+}
+
+.comments{
+	display: block;
+	margin-bottom: 1px
+}
+
+
+.open-desk,
+#toggle-add-comment{
+	z-index: 99;
+}
+/* *** Surbook **** */
+.surbook{
+	border: 1px solid #000;
+	border-radius: 5px;
+	margin-right: 2px;
+	white-space: pre; 
+}
+
+/* **** ***** ***** */
 #selectable{
-	width: 90vw;
 	margin: 2rem auto;
 }
 
@@ -10,37 +42,35 @@
 	opacity: .5 !important;
 }
 
-#selectable > tbody > tr > td {
-	border-bottom-width: 0; 
-}
-
+#selectable th,
 #selectable	td {
-	height: 45px ;
-	padding: 0 1px;
 	text-align: center;
 	position: relative;
-	left: 2px
+	border: 1px solid #aaa;
+	margin: 0;
+}
+ 
+#selectable	td {
+	height: 30px ;
+	position: relative;
 }
 
 #selectable th  {    
-	height: 45px ;
-	padding: 1rem;
-	text-align: center;
-	line-height: 1.42857143;
-	margin: 0;
-	border: 1px solid #ddd;
+	height: 40px ;
 	font-weight: normal;
 	vertical-align: middle;
 	font-weight: 700;
 }
 
-#selectable td:first-child{
-	padding: 0 .5em;
-	border: 1px solid #ddd;
+#selectable th:first-child{
+	width: 55px;
+	font-weight: 400;
+	font-size: 14px;
 }
 
-#selectable .place{
-	width: ${(100/(x+1))?string['0']}%;
+#selectable td:first-child{
+	padding: 0 .5em;
+	width: 55px;
 }
 
 #selectable .selectable > a,
@@ -50,38 +80,31 @@
 }
 
 /* EXTRA CSS 	*/
-.place{
+#selectable .place{
 	border-left: 5px solid transparent;
 }
 
-.place > span {
+#selectable .place > span {
 	display: inline-block;
 	background-color: #6d015b;
 	border-bottom-color: #6d015b;
 	border-top-color: #6d015b;
 	color: white;
-	width: 98%;
+	width: 95%;
 	border-radius: 5px;
-	left: 0;
+	left: 1%;
 }
 
-.bt-slot{
-	min-height: 1rem;
-	display: inline-block;
-	padding: 0;
-	margin: 0
-}
-
-.place.slot-open{
+#selectable .place.slot-open{
 	border-left-color: #00f829;
 }
 
-.place.slot-close{
+#selectable .place.slot-close{
 	border-left-color: #ff9102 !important;
 }
 
 #selectable th.place.slot-surbooking,
-.place.slot-surbooking {
+#selectable .place.slot-surbooking {
 	background-color: #f8000c99;
 	border-left-color: #f8000c !important;
 	border-left-width: 5px;
