--- a/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
+++ b/webapp/WEB-INF/templates/admin/plugins/appointment/modules/desk/manage_appointmentdesks.html
@@ -204,7 +204,7 @@
 <@modal id='commentModal'>
 	<@modalHeader modalTitle='#i18n{appointment.create_comment.pageTitle}' />
 	<@modalBody>
-		<@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "doAddComment" idForm language />
+		<@getCommentForm "comment" "startingValidityDate" "endingValidityDate" "idStartingTime" "idEndingTime" "doAddComment" idForm language />
 	</@modalBody>
 	<@modalFooter>
 		<@button type='button' params='data-dismiss="modal"' title='#i18n{portal.util.labelCancel}' buttonIcon='times' color='default' />
@@ -214,7 +214,7 @@
 <@modal id='modify-comment'>
 	<@modalHeader modalTitle='#i18n{appointment.create_comment.pageTitle}' />
 	<@modalBody>
-		<@getCommentForm "comment" "modifyStartingValidityDate" "modifyEndingValidityDate" "doModifyComment" idForm language />
+		<@getCommentForm "comment" "modifyStartingValidityDate" "modifyEndingValidityDate" "idModifyStartingTime" "idModifyEndingTime" "doModifyComment" idForm language />
 	</@modalBody>
 	<@modalFooter>
 		<@button type='button' params='data-dismiss="modal"' title='#i18n{portal.util.labelCancel}' buttonIcon='times' color='default' />
